<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:srcCompat="@drawable/thermometer_icon_colorful_free_png"
        android:contentDescription="@string/img" />

    <TextView
        android:id="@+id/tvFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/Did_you_know_you_can_determine_the_temperature_outside_by_counting_the_number_of_chirps_the_cricket_makes_just_count_the_number_of_chirps_one_in_25_seconds_and_place_the_number_in_the_box_below"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:hint="@string/etText"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/button" />

    <TextView
        android:id="@+id/tvSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/textview" />


</LinearLayout>